feat: improved fallback mechanism